--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,6 @@ org.gradle.daemon=false
 mc_version=1.14.4
 mod_version=0.0.1
 forge_version=28.0.40
+
+
+org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_131
