--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,11 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+curse_id
 mc_version=1.14.4
-mod_version=0.0.1
-forge_version=28.0.40
+mod_version=0.0.0
+forge_version=28.1.61
 
 
-org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_131
+jei_version=6.0.0.11
+
