--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,8 @@ minecraft {
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
     
-    mappings channel: 'snapshot', version: '20190913-1.14.3'
-
+    mappings channel: 'snapshot', version: '20200131-1.15.1'
+	//  mappings = 'snapshot_20200131'
     //makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
     
     // accessTransformer = file('build/resources/main/META-INF/accesstransformer.cfg')
@@ -94,8 +94,8 @@ dependencies {
     minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
 
 
-  compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}")
-  runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}")
+ // compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}")
+ // runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}")
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
     // compile "some.group:artifact:version"
