--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-curse_id
-mc_version=1.14.4
+curse_id=
+mc_version=1.15.2
 mod_version=0.0.0
-forge_version=28.1.61
+forge_version=31.0.14
 
 
-jei_version=6.0.0.11
+jei_version=6.0.0.2
 
