--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,10 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 curse_id=
-mc_version=1.15.2
 mod_version=0.0.0
+
+mc_version=1.15.2
 forge_version=31.0.14
 
-
 jei_version=6.0.0.2
-
+curios_version=2.0-beta2
