jarsign and mappings_version

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,12 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-curse_id=
+curse_id=0
 mod_version=0.0.0
 
 mc_version=1.15.2
-forge_version=31.0.14
+forge_version=31.1.0
+mappings_version=20200131-1.15.1
 
 jei_version=6.0.0.2
 curios_version=2.0-beta2
