--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,8 @@ minecraft {
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
     
-    mappings channel: 'snapshot', version: '20200131-1.15.1'
-	//  mappings = 'snapshot_20200131'
+    mappings channel: 'snapshot', version: mappings_version
+
     //makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
     
     // accessTransformer = file('build/resources/main/META-INF/accesstransformer.cfg')
@@ -176,30 +176,18 @@ publishing {
     }
 }
 
-
-
 task signJar(type: SignJar, dependsOn: jar) {
 
-    // Skips if the keyStore property is missing.
-    //onlyIf {
-      //  project.hasProperty('keyStore')
-    //}
- 
-	if (project.hasProperty('keyStore')) {
-	
-	    project.logger.lifecycle('!Signing jar ' + jar.archivePath.getName());
-	    // findProperty allows us to reference the property without it existing. 
-	    // Using project.propName would cause the script to fail validation if 
-	    // the property did not exist. 
-	    keyStore = project.findProperty('keyStore')
-	    alias = project.findProperty('keyStoreAlias')
-	    storePass = project.findProperty('keyStorePass')
-	    keyPass = project.findProperty('keyStoreKeyPass')
-	    inputFile = jar.archivePath
-	    outputFile = jar.archivePath
-    } else {
-	   project.logger.lifecycle('Could not sign ' + jar.archivePath.getName() + '. No keyStore property could be found')
-	}
+    project.logger.lifecycle('!Signing jar ' + jar.archivePath.getName());
+    // findProperty allows us to reference the property without it existing. 
+    // Using project.propName would cause the script to fail validation if 
+    // the property did not exist. 
+    keyStore = project.findProperty('keyStore')
+    alias = project.findProperty('keyStoreAlias')
+    storePass = project.findProperty('keyStorePass')
+    keyPass = project.findProperty('keyStoreKeyPass')
+    inputFile = jar.archivePath
+    outputFile = jar.archivePath
 }
 
 build.dependsOn signJar
