--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 curse_id=0
-mod_version=0.0.0
+mod_version=0.0.0-SNAPSHOT
 
 mc_version=1.15.2
 forge_version=31.1.0
