--- a/build.gradle
+++ b/build.gradle
@@ -178,7 +178,6 @@ publishing {
 
 task signJar(type: SignJar, dependsOn: jar) {
 
-    project.logger.lifecycle('!Signing jar ' + jar.archivePath.getName());
     // findProperty allows us to reference the property without it existing. 
     // Using project.propName would cause the script to fail validation if 
     // the property did not exist. 
@@ -191,3 +190,12 @@ task signJar(type: SignJar, dependsOn: jar) {
 }
 
 build.dependsOn signJar
+
+task copyJar(type: Copy) {
+    from "build/libs/examplemod-1.15.2-0.0.0.jar"
+    into "c:/tmp"
+}
+
+build.finalizedBy copyJar
+
+
