--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,9 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+# folder to copy the build output jar
+dist_folder=c:/temp
+
 # your properties
 curse_id=0
 mod_version=0.0.0
