--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,6 @@ forge_version=31.2.5
 mappings_version=20200514-1.15.1
 
 # optional dependencies
-jei_version=6.0.0.2
-curios_version=2.0-beta2
+jei_version=6.0.0.4
+curios_version=2.0.2.2
+
