--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,10 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-curse_id
+# folder to copy the build output jar
+dist_folder=c:/temp
+
+curse_id=
 mc_version=1.14.4
 mod_version=0.0.0
 forge_version=28.1.61
