--- a/gradle.properties
+++ b/gradle.properties
@@ -11,11 +11,11 @@ curse_id=0
 mod_version=0.0.0
 
 # required dependencies
-mc_version=1.15.2
-forge_version=31.2.5
-mappings_version=20200514-1.15.1
+mc_version=1.12.2
+forge_version=14.23.5.2847
+mappings_version=stable_39
 
 # optional dependencies
-jei_version=6.0.0.4
-curios_version=2.0.2.2
+
+jei_version=4.15.0.291
 
