--- a/gradle.properties
+++ b/gradle.properties
@@ -12,10 +12,9 @@ mod_version=0.0.0
 
 # required dependencies
 mc_version=1.16.1
-forge_version=32.0.57
-mappings_version=20200707-1.16.1
+forge_version=32.0.108
+mappings_version=20200723-1.16.1
 
 # optional dependencies
 jei_version=7.0.0.6
-curios_version=3.0-beta2
-
+curios_version=3.0
