--- a/gradle.properties
+++ b/gradle.properties
@@ -11,10 +11,12 @@ curse_id=0
 mod_version=0.0.0
 
 # required dependencies
-mc_version=1.16.1
-forge_version=32.0.108
+mc_version=1.16.2
+forge_version=33.0.3
 mappings_version=20200723-1.16.1
 
 # optional dependencies
-jei_version=7.0.0.6
-curios_version=3.0
+jei_version=7.1.0.11
+curios_version=4.0.0.0
+
+#  IMPORTANT: RUN CONFIGURATION PROGRAM ARGUMENTS   --mixin mixins.myplugin.json
