--- a/build.gradle
+++ b/build.gradle
@@ -36,15 +36,19 @@ minecraft {
     mappings channel: 'snapshot', version: mappings_version
 
     //makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
-    
-    // accessTransformer = file('build/resources/main/META-INF/accesstransformer.cfg')
+
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
     // Default run configurations.
     // These can be tweaked, removed, or duplicated as needed.
     runs {
         client {
             workingDirectory project.file('run')
-
+            
+// some IDE's can get the Program arguments here  --mixin mixins.myplugin.json
+            args "--mixin mixins.myplugin.json"
+		    property 'mixin', 'mixins.myplugin.json'
+			
             // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
 
@@ -95,7 +99,6 @@ minecraft {
 }
 
 mixin {
-// IMPORTANT: RUN CONFIGURATION PROGRAM ARGUMENTS   --mixin mixins.myplugin.json
        add sourceSets.main, "main.refmap.json"
 
        disableTargetValidator = false
@@ -133,6 +136,10 @@ dependencies {
 }
 repositories {
   maven {
+    name = "mappings"
+    url 'https://dogforce-games.com/maven'
+  }
+  maven {
     // location of the maven that hosts JEI files
     name = "Progwml6 maven"
     url = "https://dvs1.progwml6.com/files/maven/"
@@ -143,12 +150,12 @@ repositories {
     url = "https://modmaven.k-4u.nl"
   }
   maven {
+  	name = "curios"
     url = "https://maven.theillusivec4.top/"
   }
   maven {
     url 'http://maven.mcmoddev.com'
   }
-
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
