--- a/gradle.properties
+++ b/gradle.properties
@@ -8,15 +8,18 @@ dist_folder=c:/temp
 
 # your properties
 curse_id=0
+curse_slug=_curseslug_
 mod_version=0.0.0
 
 # required dependencies
 mc_version=1.16.4
-forge_version=35.0.18
+forge_version=35.1.13
 mappings_version=20201028-1.16.3
 
 # optional dependencies
-jei_version=7.6.0.58
-curios_version=4.0.2.1
+jei_version=7.6.0.62
+curios_version=4.0.3.0
+patchouli_version=1.16.4-48
+botania_version=1.16.3-409
 
 #  IMPORTANT: RUN CONFIGURATION PROGRAM ARGUMENTS   --mixin mixins.myplugin.json
