--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,5 @@
+# from creative commons project here https://github.com/FabricMC/fabric-example-mod/blob/master/LICENSE
+
 # Automatically build the project and run any configured tests for every push
 # and submitted pull request. This can help catch issues that only occur on
 # certain platforms or Java versions, and provides a first line of defence
@@ -12,9 +14,9 @@ jobs:
       matrix:
         # Use these Java versions
         java: [
-          1.8,  # Minimum supported by Minecraft
-          11,   # Current Java LTS
-          15    # Latest version
+          1.8 #  ,  # Minimum supported by Minecraft
+          #11,   # Current Java LTS
+          #15    # Latest version
         ]
         # and run on both Linux and Windows
         os: [ubuntu-20.04, windows-latest]
