--- a/build.gradle
+++ b/build.gradle
@@ -28,13 +28,12 @@ archivesBaseName = 'examplemod'
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
 checkstyle {
-    toolVersion '7.8.1'
-    configFile file("checkstyle.xml")
+    toolVersion '8.23'
+    config project.resources.text.fromUri("https://raw.githubusercontent.com/Lothrazar/Cyclic/trunk/1.16/checkstyle.xml")
 }
 checkstyleMain {
     source ='src/main/java'
 }
-
 
 minecraft {
     // The mappings can be changed at any time, and must be in the following format.
@@ -44,9 +43,7 @@ minecraft {
     // Simply re-run your setup task after changing the mappings to update your workspace.
     
     mappings channel: 'snapshot', version: mappings_version
-
-    //makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
-
+ 
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
     // Default run configurations.
@@ -119,15 +116,22 @@ dependencies {
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
+ 
+    compile fg.deobf("mezz.jei:${jei_version}")
+    compile fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
+    compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
 
-    compile fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}")
-    compile fg.deobf("top.theillusivec4.curios:curios-forge:${mc_version}-${curios_version}")
-      
-//    compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
-//    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
 
-//    compileOnly fg.deobf("vazkii.botania:Botania:${botania_version}:api")
-//    runtimeOnly fg.deobf("vazkii.botania:Botania:${botania_version}")
+    implementation fg.deobf("curse.maven:crafttweaker-239197:3183630")
+    implementation fg.deobf("curse.maven:jeitweaker-368718:3188099")
+    implementation fg.deobf("curse.maven:cucumber-272335:3187116")
+    implementation fg.deobf("curse.maven:mystical-agriculture-246640:3152061")
+    implementation fg.deobf("curse.maven:simple-storage-network-268495:3163007")
+    implementation fg.deobf("curse.maven:cyclic-239286:3188762")
+    implementation fg.deobf("curse.maven:ctm-267602:3137659")
+    implementation fg.deobf("curse.maven:refined-storage-243076:3157354")
+    implementation fg.deobf("curse.maven:storage-drawers-223852:3180569")
     
     
     // You may put jars on which you depend on in ./libs or you may define them like so..
@@ -148,30 +152,29 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
     
-
 }
+
 repositories {
   maven {
     name = "mappings"
-    url 'https://dogforce-games.com/maven'
+    url = 'https://dogforce-games.com/maven'
   }
   maven {
     // location of the maven that hosts JEI files
     name = "Progwml6 maven"
-    url = "https://dvs1.progwml6.com/files/maven/"
+    url = 'https://dvs1.progwml6.com/files/maven/'
   }
   maven {
     // location of a maven mirror for JEI files, as a fallback
     name = "ModMaven"
-    url = "https://modmaven.k-4u.nl"
+    url = 'https://modmaven.k-4u.nl'
   }
   maven {
   	name = "curios"
-    url = "https://maven.theillusivec4.top/"
+    url = 'https://maven.theillusivec4.top/'
   }
- // maven {
- //   url 'http://maven.mcmoddev.com'
- // }
+  maven { url = 'https://maven.blamejared.com' }    
+  maven { url = 'https://www.cursemaven.com'  }
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
@@ -186,9 +189,9 @@ jar {
             "Implementation-Vendor" :"examplemodsareus",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
             
-             'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
-        'MixinConfigs': 'mixins.myplugin.json',
-        'FMLCorePluginContainsFMLMod': 'true',
+            "TweakClass": "org.spongepowered.asm.launch.MixinTweaker",
+            "MixinConfigs": "mixins.myplugin.json",
+            "FMLCorePluginContainsFMLMod": "true"
         ])
     }
 }
@@ -197,6 +200,7 @@ jar {
 // This is the preferred method to reobfuscate your jar file
 jar.finalizedBy('reobfJar') 
 // However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
+
 //publish.dependsOn('reobfJar')
 
 publishing {
