--- a/gradle.properties
+++ b/gradle.properties
@@ -12,14 +12,14 @@ curse_slug=_curseslug_
 mod_version=0.0.0
 
 # required dependencies
-mc_version=1.16.4
-forge_version=35.1.13
+
+mc_version=1.16.5
+forge_version=36.0.12
 mappings_version=20201028-1.16.3
 
 # optional dependencies
-jei_version=7.6.0.62
-curios_version=4.0.3.0
+jei_version=jei-1.16.4:7.6.1.65
+curios_version=1.16.4-4.0.3.5
 patchouli_version=1.16.4-48
-botania_version=1.16.3-409
 
 #  IMPORTANT: RUN CONFIGURATION PROGRAM ARGUMENTS   --mixin mixins.myplugin.json
