template script md files

--- a/build.gradle
+++ b/build.gradle
@@ -123,15 +123,13 @@ dependencies {
  //   runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
 
 
-    implementation fg.deobf("curse.maven:crafttweaker-239197:3183630")
-    implementation fg.deobf("curse.maven:jeitweaker-368718:3188099")
-    implementation fg.deobf("curse.maven:cucumber-272335:3187116")
-    implementation fg.deobf("curse.maven:mystical-agriculture-246640:3152061")
     implementation fg.deobf("curse.maven:simple-storage-network-268495:3163007")
     implementation fg.deobf("curse.maven:cyclic-239286:3188762")
     implementation fg.deobf("curse.maven:ctm-267602:3137659")
-    implementation fg.deobf("curse.maven:refined-storage-243076:3157354")
-    implementation fg.deobf("curse.maven:storage-drawers-223852:3180569")
+  //  implementation fg.deobf("curse.maven:storage-drawers-223852:3180569")
+  //  implementation fg.deobf("curse.maven:refined-storage-243076:3157354")
+  //  implementation fg.deobf("curse.maven:cucumber-272335:3187116")
+  //  implementation fg.deobf("curse.maven:mystical-agriculture-246640:3152061")
     
     // For more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
