--- a/gradle.properties
+++ b/gradle.properties
@@ -3,23 +3,21 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-# folder to copy the build output jar
-dist_folder=c:/temp
-
 # your properties
-curse_id=0
 curse_slug=_curseslug_
+curse_id=0
 mod_version=0.0.0
 
-# required dependencies
-
 mc_version=1.16.5
-forge_version=36.0.12
+forge_version=36.1.0
 mappings_version=20201028-1.16.3
 
 # optional dependencies
-jei_version=jei-1.16.4:7.6.1.65
-curios_version=1.16.4-4.0.3.5
-patchouli_version=1.16.4-48
+jei_version=jei-1.16.5:7.6.1.75
+curios_version=1.16.5-4.0.5.0
+patchouli_version=1.16.4-50
 
-#  IMPORTANT: RUN CONFIGURATION PROGRAM ARGUMENTS   --mixin mixins.myplugin.json
+# folder to copy the build output jar
+dist_folder=c:/temp
+
+# IF you add mixins IMPORTANT: RUN CONFIGURATION PROGRAM ARGUMENTS   --mixin mixins.myplugin.json
