--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 buildscript {
     repositories {
         maven { url = 'https://files.minecraftforge.net/maven' }
-    //    maven { url = 'https://dist.creeper.host/Sponge/maven' }
+        maven { url = 'https://maven.minecraftforge.net/' }
+       // maven { url = 'https://dist.creeper.host/Sponge/maven' }
         jcenter()
         mavenCentral()
     }
@@ -43,8 +44,10 @@ minecraft {
     // Simply re-run your setup task after changing the mappings to update your workspace.
     
     mappings channel: 'snapshot', version: mappings_version
+    
+   // mappings channel: 'official', version: '1.16.5'
  
-    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+  //  accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
     // Default run configurations.
     // These can be tweaked, removed, or duplicated as needed.
@@ -53,9 +56,11 @@ minecraft {
             workingDirectory project.file('run')
             
 // some IDE's can get the Program arguments here  --mixin mixins.myplugin.json
-            //args "--mixin mixins.myplugin.json"
-		        //property 'mixin', 'mixins.myplugin.json'
-			
+            //arg "-mixin.config=mixins.myplugin.json"
+            
+            // needed for some addons such as patchouli
+            //  property 'mixin.env.disableRefMap', 'true'
+            
             // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
 
@@ -214,6 +219,6 @@ task copyJar(type: Copy) {
     into "${dist_folder}"
 }
 
-cleanJar {
+task cleanJar {
   delete 'build/libs'
 }
