--- a/gradle.properties
+++ b/gradle.properties
@@ -6,10 +6,10 @@ org.gradle.daemon=false
 # your properties
 curse_slug=_curseslug_
 curse_id=0
-mod_version=0.0.0
+mod_version=1.0.0-SNAPSHOT
 
 mc_version=1.16.5
-forge_version=36.1.0
+forge_version=36.1.31
 mappings_version=20201028-1.16.3
 
 # optional dependencies
