--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,18 @@
 buildscript {
     repositories {
-        maven { url = 'https://files.minecraftforge.net/maven' }
         maven { url = 'https://maven.minecraftforge.net/' }
-       // maven { url = 'https://dist.creeper.host/Sponge/maven' }
-        jcenter()
         mavenCentral()
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-    //    classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
     }
 }
+
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
-apply plugin: 'checkstyle'
-// apply plugin: 'org.spongepowered.mixin'
+
 apply from: 'https://raw.githubusercontent.com/SizableShrimp/Forge-Class-Remapper/main/classremapper.gradle' 
 
 import net.minecraftforge.gradle.common.tasks.SignJar
@@ -27,15 +23,7 @@ version = "${mc_version}-${mod_version}"
 group = 'com.lothrazar.examplemod' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'examplemod'
 
-java.toolchain.languageVersion = JavaLanguageVersion.of(16)
-
-checkstyle {
-    toolVersion '8.23'
-    config project.resources.text.fromUri("https://raw.githubusercontent.com/Lothrazar/Cyclic/trunk/1.16/checkstyle.xml")
-}
-checkstyleMain {
-    source ='src/main/java'
-}
+java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 minecraft {
     // The mappings can be changed at any time, and must be in the following format.
@@ -44,9 +32,8 @@ minecraft {
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
     
-   // mappings channel: 'snapshot', version: mappings_version
     
-    mappings channel: 'official', version: '1.17.1'
+    mappings channel: 'official', version: '1.18.1'
  
   //  accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
@@ -90,45 +77,20 @@ minecraft {
                 }
             }
         }
-
-        data {
-            workingDirectory project.file('run')
-
-            // Recommended logging data for a userdev environment
-            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
-
-            // Recommended logging level for the console
-            property 'forge.logging.console.level', 'debug'
-
-            args '--mod', 'examplemod', '--all', '--output', file('src/generated/resources/')
-
-            mods {
-                examplemod {
-                    source sourceSets.main
-                }
-            }
-        }
     }
 }
-
-// mixin {
-//       add sourceSets.main, "lothrazarexamplemod.refmap.json"
-//
-//       disableTargetValidator = false
-// }
 
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-//    minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
-  
-  minecraft "net.minecraftforge:forge:1.17.1-37.0.7"
-  
-   // implementation fg.deobf("mezz.jei:${jei_version}")
- //   implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
- //   compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
- //   runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
+
+    minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
+
+    implementation fg.deobf("mezz.jei:${jei_version}")
+    implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
+  //  compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
+  //  runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
 
 
   //  implementation fg.deobf("curse.maven:simple-storage-network-268495:3257204")
