--- a/gradle.properties
+++ b/gradle.properties
@@ -8,13 +8,13 @@ curse_slug=_curseslug_
 curse_id=0
 mod_version=1.0.0-SNAPSHOT
 
-mc_version=1.18.1
-forge_version=39.0.75
+mc_version=1.18.2
+forge_version=40.1.16
 
 # optional dependencies
-jei_version=jei-1.18.1:9.2.1.69
-patchouli_version=1.18.1-65
-curios_version=1.18.1-5.0.6.0
+jei_version=9.5.5.174
+patchouli_version=67
+curios_version=5.0.7.0
 
 # folder to copy the build output jar
 dist_folder=c:/temp
