--- a/gradle.properties
+++ b/gradle.properties
@@ -6,15 +6,16 @@ org.gradle.daemon=false
 # your properties
 curse_slug=_curseslug_
 curse_id=0
-mod_version=1.0.0-SNAPSHOT
+mod_version=0.0.0-SNAPSHOT
+flib_version=0.0.1-SNAPSHOT
 
 mc_version=1.18.2
-forge_version=40.1.16
+forge_version=40.1.73
 
 # optional dependencies
-jei_version=9.5.5.174
-patchouli_version=67
-curios_version=5.0.7.0
+jei_version=9.7.1.232
+patchouli_version=71.1
+curios_version=5.0.7.1
 
 # folder to copy the build output jar
 dist_folder=c:/temp
