--- a/build.gradle
+++ b/build.gradle
@@ -7,17 +7,16 @@ buildscript {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
     }
 }
-
-apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
-apply plugin: 'eclipse'
-apply plugin: 'maven-publish'
+plugins {
+    id 'eclipse'
+    id 'maven-publish'
+}
+apply plugin: 'net.minecraftforge.gradle'
 
-apply from: 'https://raw.githubusercontent.com/SizableShrimp/Forge-Class-Remapper/main/classremapper.gradle' 
+// apply from: 'https://raw.githubusercontent.com/SizableShrimp/Forge-Class-Remapper/main/classremapper.gradle' 
 
 import net.minecraftforge.gradle.common.tasks.SignJar
-import groovy.json.JsonSlurper
-import groovy.json.JsonOutput
 
 version = "${mc_version}-${mod_version}"
 group = 'com.lothrazar.examplemod' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -35,7 +34,7 @@ minecraft {
     
     mappings channel: 'official', version: '1.18.2'
  
-  //  accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
     // Default run configurations.
     // These can be tweaked, removed, or duplicated as needed.
@@ -87,6 +86,8 @@ dependencies {
 
     minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
 
+    implementation fg.deobf("blank:flib-${mc_version}:${flib_version}")
+    
     implementation fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}")
 	
   //  implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
@@ -109,6 +110,9 @@ dependencies {
 }
 
 repositories {
+  flatDir {
+      dir 'libs'
+  }
   maven {
     // location of the maven that hosts JEI files
     name = "Progwml6 maven"
@@ -121,7 +125,7 @@ repositories {
   maven {
     // location of a maven mirror for JEI files, as a fallback
     name = "ModMaven"
-    url = 'https://modmaven.k-4u.nl'
+    url = 'https://modmaven.dev'
   }
   maven {
   	name = "curios"
@@ -142,10 +146,6 @@ jar {
             "Implementation-Version": "${version}",
             "Implementation-Vendor" :"examplemodsareus",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
-            
-           // ,"TweakClass": "org.spongepowered.asm.launch.MixinTweaker",
-           // "MixinConfigs": "mixins.myplugin.json",
-           // "FMLCorePluginContainsFMLMod": "true"
         ])
     }
 }
@@ -153,9 +153,6 @@ jar {
 // Example configuration to allow publishing using the maven-publish task
 // This is the preferred method to reobfuscate your jar file
 jar.finalizedBy('reobfJar') 
-// However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
-
-//publish.dependsOn('reobfJar')
 
 publishing {
     publications {
