--- a/gradle.properties
+++ b/gradle.properties
@@ -7,10 +7,10 @@ org.gradle.daemon=false
 curse_slug=_curseslug_
 curse_id=0
 mod_version=0.0.0-SNAPSHOT
-flib_version=0.0.1-SNAPSHOT
+flib_version=0.0.2
 
 mc_version=1.18.2
-forge_version=40.1.73
+forge_version=40.1.71
 
 # optional dependencies
 jei_version=9.7.1.232
