--- a/gradle.properties
+++ b/gradle.properties
@@ -8,13 +8,17 @@ curse_slug=_curseslug_
 curse_id=0
 mod_version=1.0.0-SNAPSHOT
 
-mc_version=1.18.1
-forge_version=39.0.75
+
+flib_version=0.0.4-SNAPSHOT
+
+mc_version=1.19.4
+forge_version=45.0.43
 
 # optional dependencies
-jei_version=jei-1.18.1:9.2.1.69
-patchouli_version=1.18.1-65
-curios_version=1.18.1-5.0.6.0
+jei_version=13.1.0.2
+curios_version=5.1.4.3
+#patchouli_version=77
+
 
 # folder to copy the build output jar
 dist_folder=c:/temp
