--- a/gradle.properties
+++ b/gradle.properties
@@ -7,10 +7,10 @@ mod_id=examplemod
 # your properties
 curse_slug=_curseslug_
 curse_id=0
-mod_version=1.0.0-SNAPSHOT
+mod_version=0.0.0-SNAPSHOT
 
 mc_version=1.20.1
-forge_version=47.0.35
+forge_version=47.1.3
 
 mod_name=examplemod
 mod_group_id=com.lothrazar.examplemod
@@ -27,8 +27,10 @@ mapping_version=1.20.1
 mc_version=1.20.1
 
 
-
-flib_version=0.0.5
-#patchouli_version=79
+flib_version=0.0.8
+flib_file=4650731
+patchouli_version=81
 jei_version=15.0.0.12
-curios_version=5.2.0-beta.3+1.20
+curios_version=5.2.0-beta.3+1.20.1
+
+crafttweaker_version=14.0.6
