gradle bump versions, consolidate used properties

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,9 +5,9 @@
 # Find more information on toml format here:  https://github.com/toml-lang/toml
 # The name of the mod loader type to load - for regular FML @Mod mods it should be javafml
 modLoader="javafml" #mandatory
-license="MIT"
+license="${mod_license}"
 # A version range to match for said mod loader - for regular FML @Mod it will be the forge version
-loaderVersion="[26,)" #mandatory (26 is current forge version)
+loaderVersion="${loader_version_range}" #mandatory (26 is current forge version)
 # A URL to refer people to when problems occur with this mod
 issueTrackerURL="https://github.com/Lothrazar/ForgeTemplate/issues" #optional
 # A list of mods - how many allowed here is determined by the individual mod loader
@@ -25,33 +25,33 @@ updateJSONURL="https://raw.githubusercontent.com/Lothrazar/ForgeTemplate/trunk/1
 displayURL="https://www.curseforge.com/minecraft/mc-mods/_curseslug_"
 
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="logoFile.png" #optional
+logoFile="" #optional
 # A text field displayed in the mod UI
 credits="Thanks to forge fml mcp Mojang" #optional
 # A text field displayed in the mod UI
-authors="Lothrazar" #optional
+authors="${mod_authors}" #optional
 # The description text for the mod (multi line!) (#mandatory)
 
 description='''
-examplemod by Lothrazar
+examplemod by ${mod_authors}
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.examplemod]] #optional
     modId="forge" 
     mandatory=true 
-    versionRange="[47,47.1.3]" 
+    versionRange="${neo_version_range}" 
     ordering="NONE"
     side="BOTH"
 [[dependencies.examplemod]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.20.1,)"
+    versionRange="[${minecraft_version},)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.examplemod]]
     modId="flib"
     mandatory=true
-    versionRange="[0.0.8,)"
+    versionRange="[${flib_version},)"
     ordering="NONE"
     side="BOTH"
 	
