--- a/gradle.properties
+++ b/gradle.properties
@@ -9,28 +9,25 @@ curse_slug=_curseslug_
 curse_id=0
 mod_version=0.0.0-SNAPSHOT
 
-mc_version=1.20.1
-neo_version=47.1.28
+neo_version=47.1.54
 
 mod_name=examplemod
 mod_group_id=com.lothrazar.examplemod
 
 mod_license=SeeGithub
 mod_authors=Lothrazar
-mod_description=mod
-minecraft_version_range=[1.20.1,)
-
+mod_name=examplemod
+mod_description=examplemod
+neo_version_range=[47.1,)
 loader_version_range=[47,)
 mapping_channel=official
 minecraft_version=1.20.1
-mapping_version=1.20.1
-mc_version=1.20.1
 
 
-flib_version=0.0.8
-flib_file=4650731
+flib_version=0.0.9
+flib_file=4661080
 patchouli_version=81
-jei_version=15.0.0.12
+jei_version=15.2.0.23
 curios_version=5.2.0-beta.3+1.20.1
 
-crafttweaker_version=14.0.6
+crafttweaker_version=14.0.10
